Fixes last bugs due to last migration and renamings
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1708 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -534,7 +534,7 @@ arb:
     entries: 'السجلات'
     entries_to_point: 'اعداد المدخلات'
     error_no_file: 'عدم توفر المساعدة في هذا الجزء من الطلب ({{article}}).لم يتم كتابة التعليمات حتى الان.يمكنك زيارة موقعنا الالكتروني للمزيد من الاستفسار.'
-    #>error_sale_already_paid: 'The sales order is already paid'
+    #>error_sale_already_paid: 'The sale is already paid'
     errors_explanation: 'هنالك أخطاء في الملف. اذا لم تقم بتصحيحها فان خطوط الاخطاء لن تأخذ بعين الاعتبار اثناء الاستيراد'
     establish_capital_goods: 'تشكل الممتلكات رأس المال'
     establishment: 'المؤسسة'
@@ -833,6 +833,7 @@ arb:
     planned_on: 'قرر يوم'
     #>play: 'Play'
     #>please_wait: 'Please wait...'
+    #>preferences: 'Preferences'
     previous: 'السابق'
     previous_bank_statement: 'رقم الكشف المصرفي السابق{{number}}'
     #>price: 'Price'
@@ -1059,7 +1060,7 @@ arb:
     unpaid: 'غير مسدد'
     unpaid_amount: 'القيمة المتبقية'
     #>unpaid_days: 'Unpaid since (in days)'
-    #>unpaid_sales: 'Unpaid sales order'
+    #>unpaid_sales: 'Unpaid sale'
     unpaid_sales_export: 'csv لم يتم تسديد قائمة البيع الصادرة ضمن'
     unparted: 'غير متضرر'
     unreceived: 'غير مقبوضة'
@@ -1164,13 +1165,13 @@ arb:
       #>other: '%{count} prices'
       #>zero: '0 prices'
     x_purchases:
-      #>one: '1 purchase order'
-      #>other: '%{count} purchase orders'
-      #>zero: '0 purchase orders'
+      #>one: '1 purchase'
+      #>other: '%{count} purchases'
+      #>zero: '0 purchases'
     x_sales:
-      #>one: '1 sales order'
-      #>other: '%{count} sales orders'
-      #>zero: '0 sales orders'
+      #>one: '1 sale'
+      #>other: '%{count} sales'
+      #>zero: '0 sales'
     x_sales_invoices:
       #>one: '1 sales invoice'
       #>other: '%{count} sales invoices'
@@ -1254,7 +1255,7 @@ arb:
     password_successfully_changed: 'تم تغيير كلمة المرور الخاصة بك بنجاح'
     prices_import_succeeded: 'تم استيراد بياناتك بشكل صحيح'
     print_failure: ' غير قابل للطباعة، حاول تحديث نماذج الوئائق لتصحيح المشكلة{{error}} ({{class}}).'
-    #>purchase_already_invoiced: 'Purchase order already invoiced'
+    #>purchase_already_invoiced: 'Purchase already invoiced'
     record_cannot_be_removed: 'لا يمكن حذف السجل'
     record_has_been_correctly_removed: 'تم حذف السجل بشكل صحيح'
     record_has_not_been_removed: 'لم يتم حذف السجل بشكل صحيح'
