--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -171,7 +171,7 @@ eng:
       #>incoming_payment_modes_kame: 'Incoming payment modes kame'
       #>incoming_payment_sales_kame: 'Incoming payment sales kame'
       incoming_payment_update: 'Edit the incoming payment %{number}'
-      incoming_payment_use_create: 'Add a new incoming payment: %{type} N°%{number}'
+      incoming_payment_use_create: 'Add a new incoming payment: %{label}'
       #>incoming_payment_use_delete: 'Incoming payment use delete'
       incoming_payments: 'Incoming payments'
       #>incoming_payments_kame: 'Incoming payments kame'
@@ -188,7 +188,7 @@ eng:
       #>outgoing_payment_modes_kame: 'Outgoing payment modes kame'
       #>outgoing_payment_purchases_kame: 'Outgoing payment purchases kame'
       outgoing_payment_update: 'Edit the disbursement: %{number}'
-      outgoing_payment_use_create: 'Pay the purchase order %{number}'
+      outgoing_payment_use_create: 'Pay the purchase %{number}'
       #>outgoing_payment_use_delete: 'Outgoing payment use delete'
       outgoing_payments: 'Disbursements'
       #>outgoing_payments_kame: 'Outgoing payments kame'
@@ -284,11 +284,11 @@ eng:
       product_update: 'Edit the product: %{name}'
       products: 'Products'
       #>products_kame: 'Products kame'
-      purchase: 'Purchase %{number} - %{state}'
+      purchase: 'Purchase: %{number} - %{state}'
       purchase_abort: 'Abort'
       purchase_confirm: 'Confirm order and wait for deliveries'
       purchase_correct: 'Correct order'
-      purchase_create: 'New purchase order'
+      purchase_create: 'New purchase'
       #>purchase_delete: 'Purchase delete'
       #>purchase_deliveries_kame: 'Purchase deliveries kame'
       purchase_finish: 'Finish order'
@@ -302,39 +302,39 @@ eng:
       purchase_propose: 'Propose order'
       purchase_refuse: 'Refused order'
       #>purchase_undelivered_lines_kame: 'Purchase undelivered lines kame'
-      purchase_update: 'Edit the purchase order: %{number}'
-      purchases: 'Purchase orders'
+      purchase_update: 'Edit the purchase: %{number}'
+      purchases: 'Purchases'
       #>purchases_kame: 'Purchases kame'
-      sale: '%{label} for %{client}'
+      sale: 'Sale: %{label} for %{client}'
       sale_abort: 'Abort sale'
       sale_cancel: 'Cancel sales invoice %{number}'
       sale_confirm: 'Confirm estimate and go to deliveries'
       #>sale_contacts: 'Sale contacts'
       sale_correct: 'Correct estimate'
-      sale_create: 'New sales order'
+      sale_create: 'New sale'
       #>sale_creditable_lines_kame: 'Sale creditable lines kame'
       #>sale_credits_kame: 'Sale credits kame'
       #>sale_delete: 'Sale delete'
       #>sale_deliveries_kame: 'Sale deliveries kame'
       #>sale_duplicate: 'Sale duplicate'
-      sale_invoice: 'Invoice sales order'
+      sale_invoice: 'Invoice sale'
       sale_line_create: 'Add a new line of product'
       #>sale_line_delete: 'Sale line delete'
       #>sale_line_detail: 'Sale line detail'
-      sale_line_update: 'Edit sales order line'
+      sale_line_update: 'Edit sale line'
       #>sale_lines_kame: 'Sale lines kame'
       sale_nature_create: 'Add a new type of sale'
       #>sale_nature_delete: 'Sale nature delete'
-      sale_nature_update: 'Edit the sales order type: %{name}'
-      sale_natures: 'Sales order types'
+      sale_nature_update: 'Edit the sale type: %{name}'
+      sale_natures: 'Sale types'
       #>sale_natures_kame: 'Sale natures kame'
       #>sale_payment_uses_kame: 'Sale payment uses kame'
       sale_propose: 'Propose estimate'
       sale_refuse: 'Estimate refused'
       #>sale_subscriptions_kame: 'Sale subscriptions kame'
       #>sale_undelivered_lines_kame: 'Sale undelivered lines kame'
-      sale_update: 'Edit the sales order %{number}'
-      sales: 'Estimates and orders'
+      sale_update: 'Edit the sale %{number}'
+      sales: 'Sales'
       #>sales_kame: 'Sales kame'
       statistics: 'Statistics'
       stock_move_create: 'add a new stock move'
@@ -382,7 +382,6 @@ eng:
       #>undelivered_sales_kame: 'Undelivered sales kame'
       unexecuted_transfers: 'Waiting stock transfers'
       #>unexecuted_transfers_kame: 'Unexecuted transfers kame'
-      #>unpaid_sales_export: 'Unpaid sales export'
       warehouse: 'Warehouse: %{name}'
       warehouse_create: 'Add a new warehouse'
       #>warehouse_delete: 'Warehouse delete'
@@ -782,7 +781,7 @@ eng:
     entries: 'Entries'
     entries_to_point: 'Entries pointing to'
     error_no_file: 'No help is available for this part of the application (%{article}). Help has not yet been written. You can visit online website for more information.'
-    error_sale_already_paid: 'The sales order is already paid'
+    error_sale_already_paid: 'The sale is already paid'
     errors_explanation: 'There are errors in the file. If you do not correct them, the incorrect lines will be ignored during the import.'
     establish_capital_goods: 'Established Capital Goods'
     establishment: 'Establishment'
@@ -963,7 +962,7 @@ eng:
     no_commercial: 'No commercial'
     no_contacts: 'No address defined for %{name}'
     no_deliveries: 'No deliveries'
-    no_deliveries_for_this_sale: 'No deliveries for this sales order'
+    no_deliveries_for_this_sale: 'No deliveries for this sale'
     no_deposits: 'No deposits'
     no_filters: '--- No filters ---'
     no_javascript: 'Your web browser don''t support javascript. You need to activate it in order to use Ekylibre.'
@@ -1041,6 +1040,7 @@ eng:
     planned_on: 'Planned on'
     play: 'Play'
     please_wait: 'Please wait...'
+    preferences: 'Preferences'
     previous: 'Previous'
     previous_bank_statement: 'Previous account statement N°%{number}'
     price: 'Price'
@@ -1068,14 +1068,14 @@ eng:
     productions: 'Productions'
     products: 'Products'
     profitability: 'Profitability'
-    purchase: 'Purchase order'
-    purchase_lines: 'Purchase order lines'
+    purchase: 'Purchase'
+    purchase_lines: 'Purchase lines'
     purchase_price_create: 'Purchase price create'
     purchase_steps:
       deliveries: 'Incoming deliveries'
       products: 'Purchase'
       summary: 'Disbursements'
-    purchase_update: 'Purchase order update'
+    purchase_update: 'Purchase update'
     purchases: 'Purchases'
     purchases_price_create: 'Purchases price create'
     quantity: 'Quantity'
@@ -1115,20 +1115,20 @@ eng:
     roles: 'Roles'
     running_cost: 'Running Cost'
     running_finished: 'Running Finished'
-    sale: 'Sales order'
+    sale: 'Sale'
     sale_cancel: 'Cancel sales invoice'
     sale_deliveries: 'Deliveries'
     sale_line_create: 'Add a product to estimate (Full mode)'
-    sale_lines: 'Edit sales order'
+    sale_lines: 'Edit sale'
     sale_price_create: 'Add a new sale price'
-    sale_update: 'Update sales order'
-    sales: 'Sales orders'
+    sale_update: 'Update sale'
+    sales: 'Sales'
     sales_conditions: 'Conditions of sales'
     sales_invoice: 'Invoicing'
     sales_invoice_lines: 'Sales invoice lines'
     sales_invoice_number: 'Sales invoice'
     sales_invoice_print: 'Print sales invoice'
-    sales_invoice_sale: 'Sales invoice sales order'
+    sales_invoice_sale: 'Sales invoice sale'
     sales_invoices: 'Sales invoices'
     sales_invoices_states:
       all: 'All'
@@ -1236,8 +1236,8 @@ eng:
     unpaid: 'Unpaid'
     unpaid_amount: 'Unpaid amount'
     unpaid_days: 'Unpaid since (in days)'
-    unpaid_sales: 'Unpaid sales order'
-    unpaid_sales_export: 'Export unpaid sales orders in CSV'
+    unpaid_sales: 'Unpaid sale'
+    unpaid_sales_export: 'Export unpaid sales in CSV'
     unparted: 'Unparted'
     unreceived: 'Unreceived'
     unset_reconcilable_old_third_accounts: 'Unset reconcilable old third accounts (clients, suppliers and attorneys)'
@@ -1270,7 +1270,7 @@ eng:
       stocks: 'Stocks'
     warehouses: 'Warehouses'
     weight: 'Weight'
-    with_prints: 'Include printing archives (sales invoices, purchase orders...)'
+    with_prints: 'Include printing archives (sales invoices, purchases...)'
     x_cashes:
       one: '%{count} cash'
       other: '%{count} cashes'
@@ -1328,13 +1328,13 @@ eng:
       other: '%{count} prices'
       zero: '0 prices'
     x_purchases:
-      one: '1 purchase order'
-      other: '%{count} purchase orders'
-      zero: '0 purchase orders'
+      one: '1 purchase'
+      other: '%{count} purchases'
+      zero: '0 purchases'
     x_sales:
-      one: '1 sales order'
-      other: '%{count} sales orders'
-      zero: '0 sales orders'
+      one: '1 sale'
+      other: '%{count} sales'
+      zero: '0 sales'
     x_sales_invoices:
       one: '1 sales invoice'
       other: '%{count} sales invoices'
@@ -1413,14 +1413,14 @@ eng:
     password_successfully_changed: 'Your password has been updated successfully'
     prices_import_succeeded: 'Your data have been successfully imported '
     print_failure: 'Print failure. Try to reload the templates to correct the problem. %{error} (%{class}).'
-    purchase_already_invoiced: 'Purchase order already invoiced'
+    purchase_already_invoiced: 'Purchase already invoiced'
     record_cannot_be_removed: 'The record can not be deleted'
     record_has_been_correctly_removed: 'The record has been removed successfully'
     record_has_not_been_removed: 'The record has not been removed'
     restoration_finished: 'Restoring the backup has completed (in %{value} seconds). Your company ID is %{code}'
     sale_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     sale_cannot_be_updated: 'The estimate is no longer editable.'
-    sale_cant_be_deleted: 'The sales order can not be deleted.'
+    sale_cant_be_deleted: 'The sale can not be deleted.'
     select_entry_lines_to_mark_together: 'Select entry lines to mark together'
     specify_filter: 'You must choose at least one search filter'
     specify_updates: 'You must specify at least one field to edit'
