--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -98,7 +98,7 @@ jpn:
       #>incoming_payment_mode_update: 'Edit the incoming payment mode: %{name}'
       #>incoming_payment_modes: 'Incoming payment modes'
       #>incoming_payment_update: 'Edit the incoming payment %{number}'
-      #>incoming_payment_use_create: 'Add a new incoming payment: %{type} N°%{number}'
+      #>incoming_payment_use_create: 'Add a new incoming payment: %{label}'
       #>incoming_payments: 'Incoming payments'
       #>index: 'Finances and transactions'
       #>outgoing_payment: 'Disbursement %{number} for %{payee}'
@@ -107,7 +107,7 @@ jpn:
       #>outgoing_payment_mode_update: 'Edit the disbursement mode'
       #>outgoing_payment_modes: 'Disbursement modes'
       #>outgoing_payment_update: 'Edit the disbursement: %{number}'
-      #>outgoing_payment_use_create: 'Pay the purchase order %{number}'
+      #>outgoing_payment_use_create: 'Pay the purchase %{number}'
       #>outgoing_payments: 'Disbursements'
       #>tax_create: 'Add a new tax'
       #>tax_declaration: '%{nature} for period from %{started_on} to %{stopped_on}'
@@ -151,35 +151,35 @@ jpn:
       #>product_create: 'Add a new product'
       #>product_update: 'Edit the product: %{name}'
       #>products: 'Products'
-      #>purchase: 'Purchase %{number} - %{state}'
+      #>purchase: 'Purchase: %{number} - %{state}'
       #>purchase_abort: 'Abort'
       #>purchase_confirm: 'Confirm order and wait for deliveries'
       #>purchase_correct: 'Correct order'
-      #>purchase_create: 'New purchase order'
+      #>purchase_create: 'New purchase'
       #>purchase_finish: 'Finish order'
       #>purchase_invoice: 'Receive invoice'
       #>purchase_line_create: 'Add a product to the purchase: %{number}'
       #>purchase_line_update: 'Edit the purhase order line'
       #>purchase_propose: 'Propose order'
       #>purchase_refuse: 'Refused order'
-      #>purchase_update: 'Edit the purchase order: %{number}'
-      #>purchases: 'Purchase orders'
-      #>sale: '%{label} for %{client}'
+      #>purchase_update: 'Edit the purchase: %{number}'
+      #>purchases: 'Purchases'
+      #>sale: 'Sale: %{label} for %{client}'
       #>sale_abort: 'Abort sale'
       #>sale_cancel: 'Cancel sales invoice %{number}'
       #>sale_confirm: 'Confirm estimate and go to deliveries'
       #>sale_correct: 'Correct estimate'
-      #>sale_create: 'New sales order'
-      #>sale_invoice: 'Invoice sales order'
+      #>sale_create: 'New sale'
+      #>sale_invoice: 'Invoice sale'
       #>sale_line_create: 'Add a new line of product'
-      #>sale_line_update: 'Edit sales order line'
+      #>sale_line_update: 'Edit sale line'
       #>sale_nature_create: 'Add a new type of sale'
-      #>sale_nature_update: 'Edit the sales order type: %{name}'
-      #>sale_natures: 'Sales order types'
+      #>sale_nature_update: 'Edit the sale type: %{name}'
+      #>sale_natures: 'Sale types'
       #>sale_propose: 'Propose estimate'
       #>sale_refuse: 'Estimate refused'
-      #>sale_update: 'Edit the sales order %{number}'
-      #>sales: 'Estimates and orders'
+      #>sale_update: 'Edit the sale %{number}'
+      #>sales: 'Sales'
       #>statistics: 'Statistics'
       #>stock_move_create: 'add a new stock move'
       #>stock_move_update: 'Edit the stock move: %{name}'
@@ -507,7 +507,7 @@ jpn:
     #>entries: 'Entries'
     #>entries_to_point: 'Entries pointing to'
     error_no_file: 'ページ(%{article})はありません。'
-    #>error_sale_already_paid: 'The sales order is already paid'
+    #>error_sale_already_paid: 'The sale is already paid'
     #>errors_explanation: 'There are errors in the file. If you do not correct them, the incorrect lines will be ignored during the import.'
     #>establish_capital_goods: 'Established Capital Goods'
     #>establishment: 'Establishment'
@@ -693,7 +693,7 @@ jpn:
     #>no_commercial: 'No commercial'
     #>no_contacts: 'No address defined for %{name}'
     #>no_deliveries: 'No deliveries'
-    #>no_deliveries_for_this_sale: 'No deliveries for this sales order'
+    #>no_deliveries_for_this_sale: 'No deliveries for this sale'
     #>no_deposits: 'No deposits'
     #>no_filters: '--- No filters ---'
     #>no_javascript: 'Your web browser don''t support javascript. You need to activate it in order to use Ekylibre.'
@@ -771,6 +771,7 @@ jpn:
     #>planned_on: 'Planned on'
     #>play: 'Play'
     #>please_wait: 'Please wait...'
+    #>preferences: 'Preferences'
     previous: '前へ'
     #>previous_bank_statement: 'Previous account statement N°%{number}'
     #>price: 'Price'
@@ -798,14 +799,14 @@ jpn:
     #>productions: 'Productions'
     #>products: 'Products'
     #>profitability: 'Profitability'
-    #>purchase: 'Purchase order'
-    #>purchase_lines: 'Purchase order lines'
+    #>purchase: 'Purchase'
+    #>purchase_lines: 'Purchase lines'
     #>purchase_price_create: 'Purchase price create'
     purchase_steps:
       #>deliveries: 'Incoming deliveries'
       #>products: 'Purchase'
       #>summary: 'Disbursements'
-    #>purchase_update: 'Purchase order update'
+    #>purchase_update: 'Purchase update'
     #>purchases: 'Purchases'
     #>purchases_price_create: 'Purchases price create'
     #>quantity: 'Quantity'
@@ -845,20 +846,20 @@ jpn:
     #>roles: 'Roles'
     #>running_cost: 'Running Cost'
     #>running_finished: 'Running Finished'
-    #>sale: 'Sales order'
+    #>sale: 'Sale'
     #>sale_cancel: 'Cancel sales invoice'
     #>sale_deliveries: 'Deliveries'
     #>sale_line_create: 'Add a product to estimate (Full mode)'
-    #>sale_lines: 'Edit sales order'
+    #>sale_lines: 'Edit sale'
     #>sale_price_create: 'Add a new sale price'
-    #>sale_update: 'Update sales order'
-    #>sales: 'Sales orders'
+    #>sale_update: 'Update sale'
+    #>sales: 'Sales'
     #>sales_conditions: 'Conditions of sales'
     #>sales_invoice: 'Invoicing'
     #>sales_invoice_lines: 'Sales invoice lines'
     #>sales_invoice_number: 'Sales invoice'
     #>sales_invoice_print: 'Print sales invoice'
-    #>sales_invoice_sale: 'Sales invoice sales order'
+    #>sales_invoice_sale: 'Sales invoice sale'
     #>sales_invoices: 'Sales invoices'
     sales_invoices_states:
       #>all: 'All'
@@ -966,8 +967,8 @@ jpn:
     #>unpaid: 'Unpaid'
     #>unpaid_amount: 'Unpaid amount'
     #>unpaid_days: 'Unpaid since (in days)'
-    #>unpaid_sales: 'Unpaid sales order'
-    #>unpaid_sales_export: 'Export unpaid sales orders in CSV'
+    #>unpaid_sales: 'Unpaid sale'
+    #>unpaid_sales_export: 'Export unpaid sales in CSV'
     #>unparted: 'Unparted'
     #>unreceived: 'Unreceived'
     #>unset_reconcilable_old_third_accounts: 'Unset reconcilable old third accounts (clients, suppliers and attorneys)'
@@ -1000,7 +1001,7 @@ jpn:
       #>stocks: 'Stocks'
     #>warehouses: 'Warehouses'
     #>weight: 'Weight'
-    #>with_prints: 'Include printing archives (sales invoices, purchase orders...)'
+    #>with_prints: 'Include printing archives (sales invoices, purchases...)'
     x_cashes:
       #>one: '%{count} cash'
       #>other: '%{count} cashes'
@@ -1058,13 +1059,13 @@ jpn:
       #>other: '%{count} prices'
       #>zero: '0 prices'
     x_purchases:
-      #>one: '1 purchase order'
-      #>other: '%{count} purchase orders'
-      #>zero: '0 purchase orders'
+      #>one: '1 purchase'
+      #>other: '%{count} purchases'
+      #>zero: '0 purchases'
     x_sales:
-      #>one: '1 sales order'
-      #>other: '%{count} sales orders'
-      #>zero: '0 sales orders'
+      #>one: '1 sale'
+      #>other: '%{count} sales'
+      #>zero: '0 sales'
     x_sales_invoices:
       #>one: '1 sales invoice'
       #>other: '%{count} sales invoices'
@@ -1143,14 +1144,14 @@ jpn:
     #>password_successfully_changed: 'Your password has been updated successfully'
     #>prices_import_succeeded: 'Your data have been successfully imported '
     #>print_failure: 'Print failure. Try to reload the templates to correct the problem. %{error} (%{class}).'
-    #>purchase_already_invoiced: 'Purchase order already invoiced'
+    #>purchase_already_invoiced: 'Purchase already invoiced'
     #>record_cannot_be_removed: 'The record can not be deleted'
     #>record_has_been_correctly_removed: 'The record has been removed successfully'
     #>record_has_not_been_removed: 'The record has not been removed'
     #>restoration_finished: 'Restoring the backup has completed (in %{value} seconds). Your company ID is %{code}'
     #>sale_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     #>sale_cannot_be_updated: 'The estimate is no longer editable.'
-    #>sale_cant_be_deleted: 'The sales order can not be deleted.'
+    #>sale_cant_be_deleted: 'The sale can not be deleted.'
     #>select_entry_lines_to_mark_together: 'Select entry lines to mark together'
     #>specify_filter: 'You must choose at least one search filter'
     #>specify_updates: 'You must specify at least one field to edit'
