--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -300,8 +300,8 @@ fra:
       sale: 'Vente'
       sale_line: 'Ligne de vente'
       sale_nature: 'Type de vente'
-      sales_invoice: 'Facture'
-      sales_invoice_line: 'Ligne de facture'
+      sales_invoice: 'Facture' #!
+      sales_invoice_line: 'Ligne de facture' #!
       sequence: 'Séquence'
       stock: 'Stock de produit'
       stock_move: 'Mouvement de stock'
@@ -778,6 +778,8 @@ fra:
     prospect: 'Prospect'
     published: 'Publié'
     purchase_id: 'Achat'
+    purchase_line: 'Ligne d''achat'
+    purchase_line_id: 'Ligne d''achat'
     purchase_lines: 'Lignes d''achat'
     purchases: 'Achats'
     purchases_account: 'Compte comptable de charges'
@@ -1002,7 +1004,6 @@ fra:
             immediate: 'Immédiat'
             standard: 'Standard (30j FDM)'
         department_name: 'Gestion/Production'
-        document_natures: #!
         document_templates:
           accountancy:
             balance_sheet:
@@ -1022,11 +1023,11 @@ fra:
               filename: 'Inventaire [number]'
             purchase:
               filename: 'Achat [number]'
-            sale:
-              filename: 'Vente [number]'
             sales_invoice:
               filename: 'Facture [number]'
               to_archive: 'true'
+            sales_order:
+              filename: 'Vente [number]'
             stocks:
               filename: 'État des stocks'
             transport:
@@ -1093,6 +1094,7 @@ fra:
             format: 'D[year|4][number|4]'
             name: 'Numérotation des décaissements'
             period: 'year'
+          purchase_order: #!
           purchases:
             format: 'A[year|4][month|2][number|6]'
             name: 'Numérotation des achats'
@@ -1105,6 +1107,7 @@ fra:
             format: 'F[year|4][number|6]'
             name: 'Numérotation des factures'
             period: 'year'
+          sales_orders: #!
           subscriptions:
             format: 'ABO[number|8]'
             name: 'Numérotation des abonnements'
@@ -1349,6 +1352,10 @@ fra:
       sales_conditions:
         downpayment: 'Un acompte de %{percent}% (soit %{amount}€) devra être versé à la signature du présent devis.'
         validity: 'Ce devis et ses conditions générales sont valables jusqu''au %{expiration}.'
+      sales_invoice:
+        label:
+          credit: 'Avoir N°%{number}'
+          normal: 'Facture N°%{number}'
       states:
         aborted: 'Annulée'
         draft: 'Brouillon'
@@ -1359,15 +1366,10 @@ fra:
     sale_line:
       can_not_use_this_tracking: 'Vous ne  pouvez pas utiliser le lot %{name}, la quantité commandée est supérieure à la quantité disponible '
       currency_is_not_sale_currency: 'Le prix du produit ne correspond pas à la monnaie définie pour la vente'
+      no_product: '[Pas de produit]'
       reduction_on: 'Remise de %{percent}% sur : %{product}'
       tracking: 'N°Lot : %{serial}'
       warehouse_can_not_transfer_product: 'Le produit %{product} ne peut être sorti du réservoir %{warehouse}, celui-ci contient %{contained_product} '
-    sales_invoice:
-      label:
-        credit: 'Avoir N°%{number}'
-        normal: 'Facture N°%{number}'
-    sales_invoice_line:
-      no_product: '[Pas de produit]'
     sequence:
       periods:
         cweek: 'Semaine'
