Updates stock moves.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1710 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1046,7 +1046,7 @@ arb:
     #>luminance: 'Luminance'
     mail: 'البريد الالكتروني'
     major_accounts: 'الحسابات الئيسية'
-    manage_stocks: 'ادارة الاسهم'
+    stockable: 'ادارة الاسهم'
     mandates: 'تفويضات'
     master: 'كتلة رئيسية' #!
     max_reduction_rate: 'سعر التخفيض' #!
