--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -453,6 +453,7 @@ eng:
     deferred_payment: 'Deferred payment'
     delays: 'Delays'
     deleted_at: 'Deleted at'
+    #>deliverable: 'Deliverable'
     delivered: 'Delivered'
     deliveries: 'Deliveries'
     deliveries_conditions: 'Deliveries conditions'
@@ -644,7 +645,7 @@ eng:
     luminance: 'Luminance'
     mail: 'Mail'
     major_accounts: 'Major accounts'
-    manage_stocks: 'Manage stocks'
+    stockable: 'Manage stocks' #!
     mandates: 'Mandates'
     min_duration: 'Min duration'
     mobile: 'Mobile'
@@ -818,7 +819,7 @@ eng:
     sales_invoices: 'Sales invoices'
     salt: 'Salt'
     scheduled: 'Scheduled'
-    second_move_id: 'Second move'
+    second_move_id: 'Second move' #!
     second_warehouse: 'Second warehouse'
     second_warehouse_id: 'Second warehouse'
     self_bank_accounts: 'Self bank accounts'
@@ -847,6 +848,7 @@ eng:
     stock_id: 'Stock'
     stock_moves: 'Stock moves'
     stock_transfers: 'Stock transfers'
+    #>stockable: 'Stockable'
     stockable_products: 'Stockable products'
     stocks: 'Stocks'
     stopped_at: 'Stopped at'
@@ -895,6 +897,7 @@ eng:
     tools: 'Tools'
     tools_list: 'Tools list'
     total_weight: 'Total weight (kg)'
+    #>trackable: 'Trackable'
     tracking: 'Tracking'
     tracking_id: 'Tracking'
     tracking_serial: 'Tracking serial'
